--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,16 @@ services:
       MYSQL_ROOT_PASSWORD: q1w2e3r4
     ports:
       - 33069:3306
+    volumes:
+      - rdm-db:/var/lib/mysql      
+  web:
+    restart: always
+    build: .    
+    volumes:
+      - .:/code
+    ports:
+    - "8090:8090" 
+    depends_on:
+      - db
+volumes:
+   rdm-db:
